@@ -1,3 +1,9 @@
+Mon Oct  7 16:47:27 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* test/-ext-/debug/test_profile_frames.rb: rename class C to
+	  something long name because one test depends on absence of
+	  class ::C.
+
 Mon Oct  7 16:33:10 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* ext/-test-/debug/profile_frames.c: 
